After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658168 - Gtk-Message: Failed to load module "gail"
Gtk-Message: Failed to load module "gail"
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Li Yuan
Depends on:
Blocks:
 
 
Reported: 2011-09-04 11:34 UTC by Ionut Biru
Modified: 2011-09-05 15:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
a11y: Fix up listener registration minimally (2.35 KB, patch)
2011-09-05 15:57 UTC, Matthias Clasen
committed Details | Review
Make the gail blacklisting more quiet (1.97 KB, patch)
2011-09-05 15:57 UTC, Matthias Clasen
committed Details | Review

Description Ionut Biru 2011-09-04 11:34:26 UTC
My .xsession-errors is flooded with warnings like this for all gtk3 applications:

Gtk-Message: Failed to load module "gail"

** (gnome-contacts:12119): WARNING **: Invalid object type create

This happens because at-spi2-atk tries to load gail but gail module was removed from gtk+ 3.1.x


http://git.gnome.org/browse/gtk+/commit/?id=b7abf0b3ce7ac487851c808be577e2f24f822025

at-spi2-atk 2.1.90
gtk3 3.1.16-
Comment 1 Matthias Clasen 2011-09-04 20:38:39 UTC
We are blacklisting gail in gtk now. What you should be seeing is:

      g_message ("Not loading module \"gail\": The functionality is provided by GTK natively. Please try to not load it.");
Comment 2 Ionut Biru 2011-09-04 20:39:41 UTC
I saw that blacklist commit but definitely doesn't work
Comment 3 Mike Gorse 2011-09-05 02:39:56 UTC
Gail is still specified in at-spi2-atk.desktop.  My problem is that gtk 2 still needs it, so afaik gtk 2 applications would become inaccessible if I simply removed gail from the desktop file.

Do we have a way of loading a module in gtk+ 2 but not 3?
Comment 4 Matthias Clasen 2011-09-05 14:39:34 UTC
the module will not be loaded in gtk3, since there is not gail module for gtk3.
there is no way of specifying different modules for gtk2 and gtk3, unfortunately.
Comment 5 Matthias Clasen 2011-09-05 15:57:18 UTC
The following fixes have been pushed:
f1476f3 a11y: Fix up listener registration minimally
a51a314 Make the gail blacklisting more quiet
Comment 6 Matthias Clasen 2011-09-05 15:57:21 UTC
Created attachment 195712 [details] [review]
a11y: Fix up listener registration minimally

For god-knows-what reason, at-spi is trying various formats
of strings when registering listeners, triggering g_warnings()
from gailutil code. Stop doing that.

Also, don't leak temporary string arrays that are a side-effect
of passing parameters around as formatted strings.
Comment 7 Matthias Clasen 2011-09-05 15:57:23 UTC
Created attachment 195713 [details] [review]
Make the gail blacklisting more quiet

Don't mention blacklisted modules at all if they are not found.